kubernetes/system/adguard-home/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard-home
  labels:
    pod-security.kubernetes.io/enforce: baseline
    homelab.kfir.dev/private-gateway-access: "true"
