kubernetes/system/adguard-home/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard-home
  namespace: adguard-home
  labels:
    app: adguard-home
spec:
  serviceName: adguard-home-web
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      priorityClassName: homelab-adguard-home
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: adguard-home
          image: adguard/adguardhome:v0.107.79@sha256:aba9e3bf0613be3ba3755e1fc311b126e2c24bec25e18b6483894a88283074f0
          imagePullPolicy: IfNotPresent
          ports:
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: web
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: web
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: web
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /opt/adguardhome/conf
              subPath: conf
            - name: data
              mountPath: /opt/adguardhome/work
              subPath: work
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: adguard-home-data
        - name: tmp
          emptyDir: {}
