kubernetes/system/adguard-home/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  parentRefs:
    - name: private
      namespace: argocd
      sectionName: private-https
  hostnames:
    - adguard.home.547600.xyz
  rules:
    - backendRefs:
        - name: adguard-home-web
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home-http-redirect
  namespace: adguard-home
spec:
  parentRefs:
    - name: private
      namespace: argocd
      sectionName: private-http
  hostnames:
    - adguard.home.547600.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
